--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PAYPAL_CLIENT_ID='AfgEbhErRQBIRW2BEPiLXiwmcjSdB6WdNZx3OBWGwDpdc_DcAaeGVCosb-RYCtXDROyiPBFBtoEjTbTO'
 PAYPAL_CLIENT_SECRET='EPISFJA87aTcFbWoqW5Vsg-SvbLv7iuMGKag98N-gdzQHDFUcRk2XH6J8n08qg87ZH6aJWT5mPp8pPKI'
 
-DATABASE_URL='mongodb+srv://vladimirsolenyi25:WWSvKfSdBknc0bxg@cluster0.yfcim.mongodb.net/'
+DATABASE_URL='mongodb+srv://100fsiteblog:3XwC7GQGLRjucfhm@cluster0.ivfr9tn.mongodb.net/'
 JWT_SECRET='!@(%*Y!*%GHO!UBNFADSUO*YT*O!QU@$@!%^+!09wtikaep[])'
 
 
