--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ JWT_SECRET='!@(%*Y!*%GHO!UBNFADSUO*YT*O!QU@$@!%^+!09wtikaep[])'
 CLOUD_NAME='dh1qy0osu'
 API_KEY='443839261371287'
 API_SECRET='gulAdThj-k81As1zR8M_nH5wkTg'
+RECAPTCHA_SECRET_KEY="6LeLNX4rAAAAAF4tRGvRDu41ICDebqtRqqt10OuC"
