--- a/.env
+++ b/.env
@@ -1,11 +1,8 @@
-PAYPAL_CLIENT_ID='AfgEbhErRQBIRW2BEPiLXiwmcjSdB6WdNZx3OBWGwDpdc_DcAaeGVCosb-RYCtXDROyiPBFBtoEjTbTO'
-PAYPAL_CLIENT_SECRET='EPISFJA87aTcFbWoqW5Vsg-SvbLv7iuMGKag98N-gdzQHDFUcRk2XH6J8n08qg87ZH6aJWT5mPp8pPKI'
-
-DATABASE_URL='mongodb+srv://100fsiteblog:3XwC7GQGLRjucfhm@cluster0.ivfr9tn.mongodb.net/'
-JWT_SECRET='!@(%*Y!*%GHO!UBNFADSUO*YT*O!QU@$@!%^+!09wtikaep[])'
-
-
-CLOUD_NAME='dh1qy0osu'
-API_KEY='443839261371287'
-API_SECRET='gulAdThj-k81As1zR8M_nH5wkTg'
-RECAPTCHA_SECRET_KEY="6LeLNX4rAAAAAF4tRGvRDu41ICDebqtRqqt10OuC"
+API_KEY=443839261371287
+API_SECRET=gulAdThj-k81As1zR8M_nH5wkTg
+CLOUD_NAME=dh1qy0osu
+DATABASE_URL=mongodb+srv://100fsiteblog:3XwC7GQGLRjucfhm@cluster0.ivfr9tn.mongodb.net/
+JWT_SECRET=!@(%*Y!*%GHO!UBNFADSUO*YT*O!QU@$@!%^+!09wtikaep[])
+PAYPAL_CLIENT_ID=AfgEbhErRQBIRW2BEPiLXiwmcjSdB6WdNZx3OBWGwDpdc_DcAaeGVCosb-RYCtXDROyiPBFBtoEjTbTO
+PAYPAL_CLIENT_SECRET=EPISFJA87aTcFbWoqW5Vsg-SvbLv7iuMGKag98N-gdzQHDFUcRk2XH6J8n08qg87ZH6aJWT5mPp8pPKI
+RECAPTCHA_SECRET_KEY=6LeLNX4rAAAAAF4tRGvRDu41ICDebqtRqqt10OuC
